<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<properties>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
	</properties>
	<groupId>fadeout.software</groupId>
	<artifactId>launcher</artifactId>
	<version>1.0-SNAPSHOT</version>
	<build>
		<resources>
			<resource>
				<directory>resources</directory>
				<excludes>
					<exclude>log4j.xml</exclude>
					<exclude>config.properties</exclude>
				</excludes>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>2.4.3</version>
				<configuration>
					<!-- put your configurations here -->
					<filters>
						<filter>
							<artifact>*:*</artifact>
							<excludes>
								<exclude>META-INF/*.SF</exclude>
								<exclude>META-INF/*.DSA</exclude>
								<exclude>META-INF/*.RSA</exclude>
								<exclude>META-INF/ECLIPSEF.RSA</exclude>
								<exclude>META-INF/ECLIPSEF.SF</exclude>
								<exclude>META-INF/eclipse.inf</exclude>
							</excludes>
						</filter>
					</filters>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.4</version>
				<configuration>
					<archive>
						<manifest>
							<mainClass>wasdi.LauncherMain</mainClass>
						</manifest>
					</archive>
				</configuration>
			</plugin>            

		</plugins>
	</build>
	<dependencies>
		<!-- https://mvnrepository.com/artifact/log4j/log4j -->
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
		</dependency>
		<dependency>
			<groupId>com.rabbitmq</groupId>
			<artifactId>amqp-client</artifactId>
			<version>3.6.5</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.abdera/abdera-core -->
		<dependency>
			<groupId>org.apache.abdera</groupId>
			<artifactId>abdera-core</artifactId>
			<version>1.1.3</version>
		</dependency>
		<dependency>
			<groupId>org.esa.snap</groupId>
			<artifactId>snap-core</artifactId>
			<version>6.0.5</version>
		</dependency>
		<dependency>
			<groupId>org.esa.snap</groupId>
			<artifactId>snap-engine-utilities</artifactId>
			<version>6.0.5</version>
		</dependency>
		<dependency>
			<groupId>org.esa.snap</groupId>
			<artifactId>snap-bigtiff</artifactId>
			<version>6.0.5</version>
		</dependency>
		<dependency>
			<groupId>org.esa.s1tbx</groupId>
			<artifactId>s1tbx-op-sar-processing</artifactId>
			<version>6.0.5</version>
		</dependency>
		<dependency>
			<groupId>org.esa.s1tbx</groupId>
			<artifactId>s1tbx-op-calibration</artifactId>
			<version>6.0.5</version>
		</dependency>
		<dependency>
			<groupId>org.esa.s1tbx</groupId>
			<artifactId>s1tbx-op-sentinel1-ui</artifactId>
			<version>6.0.5</version>
		</dependency> 
		<dependency>
			<groupId>org.esa.s1tbx</groupId>
			<artifactId>s1tbx-op-utilities</artifactId>
			<version>6.0.5</version>
		</dependency> 
		<dependency>
			<groupId>commons-cli</groupId>
			<artifactId>commons-cli</artifactId>
			<version>1.3.1</version>
		</dependency>
		<dependency>
			<groupId>wasdi.shared</groupId>
			<artifactId>wasdishared</artifactId>
			<version>1.0-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>20160810</version>
		</dependency>
		<dependency>
			<groupId>org.esa.s2tbx</groupId>
			<artifactId>s2tbx-spot-reader</artifactId>
			<version>6.0.2</version>
		</dependency>
		<dependency>
			<groupId>org.esa.s2tbx</groupId>
			<artifactId>s2tbx-spot6-reader</artifactId>
			<version>6.0.2</version>
		</dependency>
		<dependency>
			<groupId>org.esa.s2tbx</groupId>
			<artifactId>s2tbx-s2msi-reader</artifactId>
			<version>6.0.2</version>
		</dependency>
		<dependency>
			<groupId>org.esa.s2tbx</groupId>
			<artifactId>s2tbx-rapideye-reader</artifactId>
			<version>6.0.2</version>
		</dependency>
		<dependency>
			<groupId>org.esa.s2tbx</groupId>
			<artifactId>s2tbx-jp2-reader</artifactId>
			<version>6.0.2</version>
		</dependency>
		<dependency>
			<groupId>org.esa.s2tbx</groupId>
			<artifactId>s2tbx-gdal-reader</artifactId>
			<version>6.0.2</version>
		</dependency>
		<dependency>
			<groupId>org.esa.s1tbx</groupId>
			<artifactId>s1tbx-op-sar-processing-ui</artifactId>
			<version>6.0.5</version>
		</dependency>
		<dependency>
			<groupId>org.esa.snap</groupId>
			<artifactId>snap-raster</artifactId>
			<version>6.0.5</version>
		</dependency>
		<dependency>
			<groupId>org.esa.s2tbx</groupId>
			<artifactId>s2tbx-radiometric-indices</artifactId>
			<version>6.0.2</version>
		</dependency>
		<dependency>
			<groupId>org.esa.s2tbx</groupId>
			<artifactId>s2tbx-cache</artifactId>
			<version>6.0.2</version>
		</dependency>
		<dependency>
			<groupId>org.esa.s2tbx</groupId>
			<artifactId>s2tbx-biophysical</artifactId>
			<version>6.0.2</version>
		</dependency>
		<dependency>
			<groupId>org.esa.s2tbx</groupId>
			<artifactId>lib-gdal</artifactId>
			<version>6.0.2</version>
		</dependency>
		<dependency>
			<groupId>org.esa.snap</groupId>
			<artifactId>snap-rcp</artifactId>
			<version>6.0.5</version>
		</dependency>
		<dependency>
			<groupId>org.vito.probavbox</groupId>
			<artifactId>probavbox-kit</artifactId>
			<version>2.0.0</version>        
		</dependency>
		<dependency>
			<groupId>org.vito.probavbox</groupId>
			<artifactId>probavbox-reader</artifactId>
			<version>2.0.0</version>        
		</dependency>
		<dependency>
			<groupId>org.esa.s3tbx</groupId>
			<artifactId>s3tbx-aatsr-sst</artifactId>
			<version>6.0.4</version>     
		</dependency>
		<dependency>
			<groupId>org.esa.s3tbx</groupId>
			<artifactId>s3tbx-aerosol-retrieval</artifactId>
			<version>6.0.4</version>     
		</dependency>
		<dependency>
			<groupId>org.esa.s3tbx</groupId>
			<artifactId>s3tbx-alos-reader</artifactId>
			<version>6.0.4</version>     
		</dependency>
		<dependency>
			<groupId>org.esa.s3tbx</groupId>
			<artifactId>s3tbx-arc</artifactId>
			<version>6.0.4</version>     
		</dependency>
		<dependency>
			<groupId>org.esa.s3tbx</groupId>
			<artifactId>s3tbx-atsr-reader</artifactId>
			<version>6.0.4</version>     
		</dependency>
		<dependency>
			<groupId>org.esa.s3tbx</groupId>
			<artifactId>s3tbx-avhrr-reader</artifactId>
			<version>6.0.4</version>     
		</dependency>
		<dependency>
			<groupId>org.esa.s3tbx</groupId>
			<artifactId>s3tbx-c2rcc</artifactId>
			<version>6.0.4</version>     
		</dependency>
		<dependency>
			<groupId>org.esa.s3tbx</groupId>
			<artifactId>s3tbx-chris-reader</artifactId>
			<version>6.0.4</version>     
		</dependency>
		<dependency>
			<groupId>org.esa.s3tbx</groupId>
			<artifactId>s3tbx-flhmci</artifactId>
			<version>6.0.4</version>     
		</dependency>
		<dependency>
			<groupId>org.esa.s3tbx</groupId>
			<artifactId>s3tbx-fub-wew</artifactId>
			<version>6.0.4</version>     
		</dependency>
		<dependency>
			<groupId>org.esa.s3tbx</groupId>
			<artifactId>s3tbx-fu-operator</artifactId>
			<version>6.0.4</version>     
		</dependency>
		<dependency>
			<groupId>org.esa.s3tbx</groupId>
			<artifactId>s3tbx-idepix</artifactId>
			<version>6.0.4</version>     
		</dependency>
		<dependency>
			<groupId>org.esa.s3tbx</groupId>
			<artifactId>s3tbx-kit</artifactId>
			<version>6.0.4</version>     
		</dependency>
		<dependency>
			<groupId>org.esa.s3tbx</groupId>
			<artifactId>s3tbx-landsat-reader</artifactId>
			<version>6.0.4</version>     
		</dependency>
		<dependency>
			<groupId>org.esa.s3tbx</groupId>
			<artifactId>s3tbx-meris-cloud</artifactId>
			<version>6.0.4</version>     
		</dependency>
		<dependency>
			<groupId>org.esa.s3tbx</groupId>
			<artifactId>s3tbx-meris-brr</artifactId>
			<version>6.0.4</version>     
		</dependency>
		<dependency>
			<groupId>org.esa.s3tbx</groupId>
			<artifactId>s3tbx-meris-sdr</artifactId>
			<version>6.0.4</version>     
		</dependency>
		<dependency>
			<groupId>org.esa.s3tbx</groupId>
			<artifactId>s3tbx-meris-l2auxdata</artifactId>
			<version>6.0.4</version>     
		</dependency>
		<dependency>
			<groupId>org.esa.s3tbx</groupId>
			<artifactId>s3tbx-meris-radiometry</artifactId>
			<version>6.0.4</version>     
		</dependency>
		<dependency>
			<groupId>org.esa.s3tbx</groupId>
			<artifactId>s3tbx-meris-smac</artifactId>
			<version>6.0.4</version>     
		</dependency>
		<dependency>
			<groupId>org.esa.s3tbx</groupId>
			<artifactId>s3tbx-meris-ops</artifactId>
			<version>6.0.4</version>     
		</dependency>
		<dependency>
			<groupId>org.esa.s3tbx</groupId>
			<artifactId>s3tbx-merisl3-reader</artifactId>
			<version>6.0.4</version>     
		</dependency>
		<dependency>
			<groupId>org.esa.s3tbx</groupId>
			<artifactId>s3tbx-modis-reader</artifactId>
			<version>6.0.4</version>     
		</dependency>
		<dependency>
			<groupId>org.esa.s3tbx</groupId>
			<artifactId>s3tbx-mphchl</artifactId>
			<version>6.0.4</version>     
		</dependency>
		<dependency>
			<groupId>org.esa.s3tbx</groupId>
			<artifactId>s3tbx-rad2refl</artifactId>
			<version>6.0.4</version>     
		</dependency>
		<dependency>
			<groupId>org.esa.s3tbx</groupId>
			<artifactId>s3tbx-olci-radiometry</artifactId>
			<version>6.0.4</version>     
		</dependency>
		<dependency>
			<groupId>org.esa.s3tbx</groupId>
			<artifactId>s3tbx-owt-classification</artifactId>
			<version>6.0.4</version>     
		</dependency>
		<dependency>
			<groupId>org.esa.s3tbx</groupId>
			<artifactId>s3tbx-sentinel3-reader</artifactId>
			<version>6.0.4</version>     
		</dependency>
		<dependency>
			<groupId>org.esa.s3tbx</groupId>
			<artifactId>s3tbx-slstr-pdu-stitching</artifactId>
			<version>6.0.4</version>     
		</dependency>
		<dependency>
			<groupId>org.esa.s3tbx</groupId>
			<artifactId>s3tbx-slstr-regrid</artifactId>
			<version>6.0.4</version>     
		</dependency>
		<dependency>
			<groupId>org.esa.s3tbx</groupId>
			<artifactId>s3tbx-spot-vgt-reader</artifactId>
			<version>6.0.4</version>     
		</dependency>

		<!-- FTP server + tests -->
		<dependency> 
			<groupId>org.mockftpserver</groupId> 
			<artifactId>MockFtpServer</artifactId> 
			<version>2.7.1</version> 
			<scope>test</scope> 
		</dependency>
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<!-- use version 2.1.0 or higher -->
			<version>2.1.0</version>
			<scope>test</scope>
		</dependency>
	<!--dependency>
      		<groupId>com.github.docker-java</groupId>
      		<artifactId>docker-java</artifactId>
      		<version>3.0.14</version>
		</dependency-->           
</dependencies>


</project>